style.css
body{
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    background-color: #333;
}
.topnav {
    transition: top 0.3s;
    position: fixed;
    background-color: #333;
    overflow: hidden;
    border-bottom: #9A2A2A;
  }
  
  .topnav a {
    float: left;
    color: #fff;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
  }
  
  .topnav a:hover {
    background-color: #9A2A2A;
    color: white;
  }
  
  .topnav a.active {
    background-color: #9A2A2A;
    color: white;
  }

  .content{
    background-color: #333;
    text-align: left;
    color: white;
  }

  .about_me{
    background-color: #333;
    width: 200px;
    height: 800px;
    border-right: #fff;
  }

  .profile_picture{
    background-color: #333;
    background-size: cover; 
    height:150px; 
    padding-top: 10px;
    border-right: #fff;
  }

  .name{
    background-color: #333;
    color: white;
    width: 200px;
    height: auto;
    padding-top: 10px;
    text-align: left;
    padding: left 50px;
    size: 24px;
  }

  .information{
    background-color: #333;
    color: white;
    width: 400px;
    height: auto;
    padding-top: 5px;
    text-align: left;
    size: 12px;
  }
  .download_resume{
    background-color: black;
    color: white;
    text-align: left;
    size: 24px;
  }

  .download_resume:hover{
    color: blue;
  }

  .resume{
    text-align: center;
    background-image: './resume';
  }

